clusters/talos-cluster/frames/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frames-service
  namespace: frames
spec:
  selector:
    app: frames-deployment
  ports:
    - name: frames-tcp
      protocol: TCP
      port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frames-demo-service
  namespace: frames
spec:
  selector:
    app: frames-demo-deployment
  ports:
    - name: frames-tcp
      protocol: TCP
      port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frames-tailscale-service
  namespace: frames
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: frames-deployment
  ports:
    - name: frames-tcp
      protocol: TCP
      port: 3000
