clusters/talos-cluster/frames/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frames-route
  namespace: frames
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "frames.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frames-service
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frames-cloudflare-route
  namespace: frames
spec:
  parentRefs:
    - name: cloudflare-gateway
      namespace: cloudflare-gateway
  hostnames:
    - "frames.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frames-service
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frames-demo-route
  namespace: frames
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "frames-demo.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frames-demo-service
          port: 3000
