clusters/talos-cluster/frames/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frames-ingress
  namespace: frames
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: frames-tailscale-service
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
    - hosts:
        - frames
